<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/speech_input"
        android:title="Speech Input" />
    <item
        android:id="@+id/map"
        android:title="@string/map" />
    <item
        android:id="@+id/joystick"
        android:title="@string/joystick" />
    <item
        android:id="@+id/video"
        android:title="@string/video" />
    <item
        android:id="@+id/speech_output"
        android:checkable="true"
        android:title="Speech Output" />
    <item
        android:id="@+id/network"
        android:title="Network" />
    <item
        android:id="@+id/admin"
        android:checkable="true"
        android:title="Administrator" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />

</menu>